grammar errors fix

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 	  <div class="jumbotron jumbotron-fluid bg-info text-white bg-gradient-info text-center">
 		  <div class="container">
   <h1 class="display-4">About Restaurant City</h1>
-  <p class="lead">Information about our wonderful staff and enstablishment.</p>
+  <p class="lead">Information about our wonderful staff and establishment.</p>
   <hr class="my-4">
 	  <div class="container">
   <div class="row">
     <div class="col-sm-10 col-md-6 col-lg-4">
      <img src="images/pasta-plate.jpg" alt="pasta-plate" class="img-fluid">
 		<div class="text-under">
-		<p class="text-google-more">We are a world renound restaurant that loves to sell delicious pasta and "delicatessen" to its customers. We have been known to have an astounding service and that we take good care of our staff and customers alike.</p>
+		<p class="text-google-more">We are a world renouned restaurant that loves to sell delicious pasta and "delicatessen" to its customers. We have been known to have an astounding service and that we take good care of our staff and customers alike.</p>
 		</div>
     </div>
     <div class="col-sm-10 col-md-6 col-lg-4">
