--- a/181290.html
+++ b/181290.html
@@ -20,10 +20,10 @@
 	  <br>
 	  	  <ul class="nav justify-content-center">
   <li class="nav-item">
-    <a class="nav-link active" href="file:///Users/davidewijkmans/Desktop/prj4-check-6/prj4-check-6/index.html">Home</a>
+    <a class="nav-link active" href="index.html">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="file:///Users/davidewijkmans/Desktop/prj4-check-6/prj4-check-6/181290.html">Menu</a>
+    <a class="nav-link" href="181290.html">Menu</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Location</a>
@@ -69,8 +69,8 @@
 	   <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="js/jquery-3.5.1.slim.min.js"> </script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
